--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <h1>Hello there, awesome person!</h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
     <ul>
-    <li>https://www.pinterest.com/</li>
-    <li>https://www.youtube.com/</li>
-    <li>https://www.notion.so/</li>
+     <li> <a href="https://www.pinterest.com"> This a link to Pinterest! </a> </li>
+     <li> <a href="https://www.youtube.com"> This a link to YouTube! </a> </li>
+     <li> <a href="https://www.notion.so"> This a link to Notion! </a> </li>
 </ul>
   </body>
 </html>
