--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
      <title>My awesome web page</title>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Hello there, awesome person!</h1>
-    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <img src="https://octodex.github.com/images/vinyltocat.png" />
     <ul>
      <li> <a href="https://www.pinterest.com"> This a link to Pinterest! </a> </li>
      <li> <a href="https://www.youtube.com"> This a link to YouTube! </a> </li>
